# corgi

./: .bazelrc  BUILD  MODULE.bazel  README.md  flake.nix  package.json  pnpm-lock.yaml  shell.nix  tsconfig.json
build_defs/: BUILD  aspect_rules_ts.patch  esbuild_cjs_inject.js  esbuild_node_config.js  jest.config.js  postcss.config.mjs  tailwind.config.mjs  ts.bzl
js/common/: BUILD  collections.ts  comparisons.ts  css.ts  debouncer.test.ts  debouncer.ts  futures.test.ts  futures.ts  little_endian_view.ts  memoized.ts  promises.ts  queued_worker_pool.ts  timer.ts  worker_pool.ts
js/corgi/: BUILD  README.md  binder.test.ts  binder.ts  controller.ts  dom.ts  elements.ts  events.ts  index.ts  service.ts  testing.ts  vdom.test.tsx  vdom.ts
js/corgi/history/: BUILD  history_service.ts  views_service.ts
js/data/: BUILD.bazel  caching.ts  middleware.ts  requestor.ts
js/emu/: BUILD  button.tsx  button_controller.ts  checkbox.tsx  checkbox_controller.ts  dialog.tsx  events.ts  input.tsx  input_controller.ts  progress.tsx  select.tsx  select_controller.ts
js/emu/menu/: BUILD  menu_controller.ts  menu_element.tsx  menu_service.tsx
js/server/: BUILD  data.ts  errors.ts  server.ts  ssr_aware.ts
