module(name = "dev_april_corgi", version = "0.0.0", compatibility_level = 1)

bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
bazel_dep(name = "aspect_rules_esbuild", version = "0.21.0")
bazel_dep(name = "aspect_rules_jest", version = "0.22.0")
bazel_dep(name = "aspect_rules_js", version = "2.3.7")
bazel_dep(name = "rules_nodejs", version = "6.3.5")
bazel_dep(name = "aspect_rules_ts", version = "3.5.2")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", isolate = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", isolate = True)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

